# Drone_pick-place

./: .gitignore  .gitmodules  Instructions.txt  readme.md  run.sh  run_no_nvidia.sh
docker_ws/: Dockerfile  Utility.txt  build.sh  entrypoint.sh
matlab/: license_agreement.txt  patents.txt
matlab/appdata/: compcontents.json  installedProductData.json  prodcontents.json
matlab/appdata/components/: MOlocaleswitch_glnxa64 1747090751.xml  RptgenSL_resources_common 1737522943.xml  RptgenSL_resources_ja_JP 1739923174.xml  RptgenSL_resources_zh_CN 1739923180.xml  SDI_resources_common 1743859941.xml  SDI_resources_ja_JP 1743859942.xml  SDI_resources_ko_KR 1743859943.xml  SDI_resources_zh_CN 1743859943.xml  SLDD_resources_common 1732227561.xml  SLDD_resources_ja_JP 1739923164.xml  SLDD_resources_ko_KR 1739923165.xml  SLDD_resources_zh_CN 1739923165.xml  SLNamespace_glnxa64 1747091682.xml  activation_common 1741202437.xml  (+1824 more)
matlab/help/: basecodes.properties  docset.json  productfamily.properties  support_packages.json
matlab/toolbox/ros/mlroscpp/custom_messages/share/carla_ackermann_msgs/: package.xml
matlab/toolbox/ros/mlroscpp/custom_messages/share/carla_ackermann_msgs/cmake/: carla_ackermann_msgs-msg-extras.cmake  carla_ackermann_msgs-msg-paths.cmake  carla_ackermann_msgsConfig.cmake
ros_ws/Attach_plugin/: CMakeLists.txt  CMakeLists_Esempio_stampa.txt
ros_ws/Attach_plugin/src/: Attach_plugin.cc  Esempio_stampa.cc
ros_ws/LI-SLAM/: pose_graph.g2o
ros_ws/Micro-XRCE-DDS-Agent/: CMakeLists.txt
ros_ws/install/: 4013_gz_x500_lidar_2d  default.sdf  model.sdf  setup.sh
(+59132 files in other folders)
